# OpenGL-3D-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config_format.txt
assets/shaders/: fragment_basic.glsl  fragment_test.glsl  vertex_basic.glsl
config/: shaders.xml
include/engine/: camera.hpp  object.hpp  program_store.hpp  scene.hpp  shader.hpp  shader_store.hpp
include/helper/: printer.hpp
include/math/: mat4.hpp  vec2.hpp  vec3.hpp
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  camera.cpp  main.cpp  object.cpp  program_store.cpp  scene.cpp  shader_store.cpp
